(lang dune 3.17)

(name noscan)

(generate_opam_files true)

(source
 (github nuts-n-bits/noscan))

(authors "civ6 <civ6@icloud.com>")

(maintainers "lonely me <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name noscan)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
